[project]
name = "planner-calendar"
version = "0.1.0"
description = "Generate a yearly HTML calendar from a Microsoft Planner Excel export."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
    "pillow>=11.1.0",
]

[dependency-groups]
dev = [
    "nuitka>=2.6.9",
]
